--- a/index.html
+++ b/index.html
@@ -3,15 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share your genius</title>
-    <link rel="stylesheet" href="style.css">
+    <title>What IS Rainworld?</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        @font-face {
+        font-family: 'rodondoregular';
+        src: url(css/rodondo-webfont.woff);
+        }
+    </style>
 </head>
+<div>
 <body>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="resource.html">Resources</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul> 
+    <nav>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="resource.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <h1 class="title">What fate a slugcat?</h1>
+    <h2 id="what-is-rw">What IS Rainworld?</h2>
+<br>
+<br>
+<br>
+    <div class="row">
+        <div class="column left">
+            <h1 class="marge" style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 1px;">That's a good question!</h1>
+            <div style="background-color: rgb(102, 102, 102); margin-left: 30px; padding-top:1px; padding-bottom: 1px; color: black;">
+                <p class="marge">And one <i>I'm</i> here to answer, or at least, I'll try my best to answer it!</p>
+                <p class="marge">If we were to use the offical <a href="https://store.steampowered.com/app/312520/Rain_World/">Steam</a> description the answer to this question would be the following:</p> 
+                <p class="marge" style="text-align: center;"><i>"You are a nomadic slugcat, both predator and prey in a broken ecosystem. Grab your spear and brave the industrial wastes, hunting enough food to survive, but be wary— other, bigger creatures have the same plan... and slugcats look delicious."</i> </p>
+            </div>
+        </div>
+        <div class="column right">
+            <iframe style="margin-left: 35px;" width="560" height="315" src="https://www.youtube.com/embed/4QmZRw8gbOU?si=_U4p5va46haht05V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </div>
+<br>
+<br>
+<br>
+    <div class="row">
+        <div class="column right">
+            <iframe class="marge" width="560" height="315" src="https://www.youtube.com/embed/ZjYTZbS-dfw?si=YzNtvGcTZuSTSMbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="column left" style="margin-right: 30px; margin-right: 0px;">
+            <h1 style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 1px;">But that's a boring answer...</h1>
+            <div style="background-color: rgb(102, 102, 102); padding-top:1px; padding-bottom: 1px; color: black; margin-right: 30px;">
+                <p class="marge">So let me explain why <i>I</i> personally love <span style="font-family: 'rodondoregular'; font-size: larger;">rain world</span>!</p>
+                <p class="marge">There are three main factors that I talk about when introducing new players to the game:</p> 
+                <div class="container">
+                    <ul class="myUL">
+                        <li>Environment</li>
+                        <li>Gameplay</li>
+                        <li>Storytelling</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+<br>
+<br>
+<br>
+<div class="row">
+    <div class="column left">
+        <h1 class="marge" style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 1px; text-align: center;">Gameplay</h1>
+        <div style="background-color: rgb(102, 102, 102); margin-left: 30px; padding-top:1px; padding-bottom: 1px; margin-right: 30px; color: black;">
+            <p class="marge">Gameplay can include many facets of a game, but for this brief summary I'll only cover the game's <b>exploration</b>, <b>movement</b>, and <b>threats</b>.</p>
+            <p class="marge"><i>Exploration:</i> Arguably the most crucial part of rain world's appeal is it's exploration system. When you first play the game, the first thing you'll do after the short tutorial section is to explore, and you'll keep exploring for the rest of the game (there are some small exceptions as campaigns later on will have different goals, but exploration is still a crucial piece no matter the campaign). This can be offputting to many new players though as while there is <i>some</i> guidanace of where you could take your journey, it is also completely up to the player.</p>
+            <p class="marge"><i>Movement:</i> Another important factor in the rain world would be the movement system. While the game's focus isn't on learning complex movement tricks (like dedicated speedrun games such as <a href="https://www.celestegame.com/">Celeste</a> and the like), there are still a lot of movement techniques which can help in late-game playthroughs. It is generally wise to improve your movement skills anyway as the platforming does get harder in the later game reigons.</p>
+            <p class="marge"><i>Threats:</i> This game has a <i>lot</i> of threats, which is the point - you are playing as a small animal near the bottom a large food chain and <i>everything</i> (and I mean EVERYTHING) wants to kill you. It would be wrong to spoil all of the threats here, but I will mention the most interesting part about the game's 'ecosystem', it is one that interacts with itself without the player's involvement (through different generative and enemy ais) - you aren't special, you are just another creature in the larger ecosystem.</p>
+        </div>
+    </div>
+    <div class="column left" style="margin-right: 0px;">
+        <h1 style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 1px; text-align: center;">Storytelling</h1>
+        <div style="background-color: rgb(102, 102, 102); padding-top:1px; padding-bottom: 1px; color: black; margin-right: 30px;">
+            <p class="marge">Rainworld's story and the history behind the overall environment is long and rather complicated, to even breifly try to summarize it would create a paragraph <i>much</i> longer than the Gameplay one already is, plus the best part about rain world's worldbuilding and story is that it is almost entirely optional. I mean optional in the sense that many of the major parts of the story can be missed or misunderstood if you, the player, aren't actively looking for answers. That alone makes the story telling incredibly unique but combine that with the fact you appear to be traversing through a ruined civilization, and that the respawn mechanic is incorporated into the story, (hopefully) leaves a lot to be curious about and want to discover.</p> 
+        </div>
+    </div>
+</div>
 </body>
+</div>
 </html>
