--- a/resource.html
+++ b/resource.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reasources</title>
+    <title>Resources</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        @font-face {
+        font-family: 'rodondoregular';
+        src: url(css/rodondo-webfont.woff);
+        }
+
+        .wiki-embed {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+            height: 450px;
+        }
+    </style>
 </head>
+<div>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a class="active" href="resource.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+<br>
+    <div>
+        <h1 class="wiki-embed" style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 0px; text-align: center; background-color: black; height: fit-content;"><a href="https://noblecat57.github.io/index.html">Interactive map</a></h1>
+        <embed class="wiki-embed" src="https://noblecat57.github.io/index.html">
+    </div>
+<br>
+<br>
+<br>
+    <div class="row">
+        <div class="column left">
+            <h1 class="marge" style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 1px; text-align: center;"><a href="https://docs.google.com/document/d/1o3gouaiHsHT2H9d2HD5gDhgmoWwoL94gSFt7Ka1-vDk/edit?usp=sharing">Movement guide</a></h1>
+            <div style="background-color: rgb(102, 102, 102); margin-left: 30px; padding-top:1px; padding-bottom: 1px; margin-right: 30px; color: black;">
+                <p class="marge">A helpful guide for rain world movement from beginner to advanced techniques. Try to learn lots on your own before consulting guides though! But don't worry about having to learn from guides as well since there is a lot of tech you could miss otherwise.</p>
+            </div>
+        </div>
+        <div class="column left" style="margin-right: 0px;">
+            <h1 class="marge" style="font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 1px; text-align: center;"><a href="https://youtu.be/On-gEZ-mwcE?si=EjRIEeeh8iUt5YzY">Story videos</a></h1>
+            <div style="background-color: rgb(102, 102, 102); margin-left: 30px; padding-top:1px; padding-bottom: 1px; margin-right: 30px; color: black;">
+                <p class="marge">Don't have the time to play the game but are still interested in the story? Well there's plenty of videos for that! Beware of spoilers though. If you want shorter, more humorous summary videos instead, I recommend two videos by Daszombes: <a href="https://youtu.be/QhaQwpfd85M?si=BwPwg5ZpM8ieOxSR">A short summary</a> and <a href="https://youtu.be/sD_6xIATgdA?si=ek0Az32ZaPrJ6Vw8">A short-ish summary</a>.</p>
+            </div>
+        </div>
+    </div>
 </body>
+</div>
 </html>
