Changed wording from beat to complete

--- a/gallery.html
+++ b/gallery.html
@@ -73,7 +73,7 @@
 <br>
 <h1 style="text-align: center; font-family: 'rodondoregular'; font-size: 40px; margin-top: 0px; margin-bottom: 0px;">The Campaigns</h1>
     <div style="background-color: rgb(102, 102, 102); margin-left: 100px; margin-right: 100px; padding-top:1px; padding-bottom: 1px; color: black; font-family: 'Trebuchet MS', sans-serif; text-align: center; font-size: 23px;">
-      <p class="marge">A collection of images of each of the campaigns of the game - Monk, Survior, and Hunter are in the base game and the others are a part of the Downpour DLC. To unlock Hunter and Gourmand, you must beat Monk or Survivor. To unlock Artificer and Rivulet, you must beat Hunter or Gourmand. To unlock Spearmaster and Saint, you must beat Artificer or Rivulet.</p>
+      <p class="marge">A collection of images of each of the campaigns of the game - Monk, Survior, and Hunter are in the base game and the others are a part of the Downpour DLC. To unlock Hunter and Gourmand, you must complete Monk or Survivor. To unlock Artificer and Rivulet, you must complete Hunter or Gourmand. To unlock Spearmaster and Saint, you must complete Artificer or Rivulet.</p>
     </div>
 <br>
 <br>
